--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@ body {
     text-align: center;
     font-family: 'Montserrat', sans-serif;
     font-size: 1.5rem;
+    margin: 0;
 }
 
 .top-container {
@@ -67,6 +68,12 @@ span {
 
 }
 
+
+.skill-row--1 {
+text-align: right;
+
+}
+
 .first-image {
     width: 25%;
     float: left;
@@ -89,9 +96,23 @@ hr {
 
 }
 
-.eating-again-class {
+.hard-skills-list {
+    margin-right: 40px;
+    list-style: none;
+}
+
+.soft-skills-list {
+    list-style: none;
+}
+
+
+.soft-skills {
+    margin-bottom: 200px;
+}
+
+.soft-skills-title {
     color: #11999E;
-    margin-top: 150px;
+    margin-top: 200px;
 }
 
 .btn {
